--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,5 +4,6 @@ head
   = stylesheet_link_tag 'application', media: :all
   = javascript_include_tag 'application'
 body
-  | TODO
+  .navbar-nav
   = yield
+
