--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+
+li {
+    display: inline;
+    list-style-type: none;
+    background-color:#425899;
+    color:white;
+    padding:5px;
+}
