--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,1 +1,20 @@
-| Homepage
+doctype html
+html
+	head
+		title Songsync|HomePage
+		<link href="/Users/rosexu/SongSync/app/assets/stylesheets" rel="stylesheet" type="text/css" />
+
+	body
+		h1 HomePage
+		nav
+			ul
+				li PlaceHolder 1
+				li PlaceHolder 2
+				li
+					| Placeholder 3
+					ul
+						li Sub1	
+						li Sub2
+						li Sub3
+				
+
