--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -8,10 +8,13 @@ html
 		h1 HomePage
 		nav
 			ul
-				li PlaceHolder 1
-				li PlaceHolder 2
+				li 
+					a href = "#" PlaceHolder 1
+				li 
+					a href = "#" PlaceHolder 2
 				li
-					| Placeholder 3
+					a href = "#" Placeholder 3
+					
 					ul
 						li Sub1	
 						li Sub2
