Some more angular stuff

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,8 @@
 html
-	head
-	  title Songsync
-	  = stylesheet_link_tag 'application', media: :all
-	  = javascript_include_tag 'application'
-	body
-	  .navbar-nav
-	  = yield
-
+  head
+    title Songsync
+    = stylesheet_link_tag 'application', media: :all
+    = javascript_include_tag 'application'
+  body
+    | TODO
+    = yield
