API key, more angular

--- a/app/views/pages/partial/login.html.slim
+++ b/app/views/pages/partial/login.html.slim
@@ -4,7 +4,7 @@ form.form-horizontal ng-submit='login(credentials)'
   .input-group
     label.control-label.col-lg-4 Email
     .col-lg-8
-      input.form-control type='email' ng-model='credentials.email'
+      input.form-control type='email' ng-model='credentials.login'
   .input-group
     label.control-label.col-lg-4 Password
     .col-lg-8
