--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,28 @@
-// Place all the styles related to the Pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,900,700,500,400italic,500italic,700italic,900italic,300italic,300,100,100italic);
+
+div#home-page {
+  background-color: #2c3e50;
+  height: 100%;
+
+  text-align: center;
+}
+
+h1.header {
+  margin-top: 0px;
+  padding-top: 150px;
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
+}
+
+div.oauth-badges {
+  $separation-px: 40px;
+  padding-top: 75px;
+
+  button#btn-spotify {
+    margin-right: $separation-px / 2;
+  }
+
+  button#btn-facebook {
+    margin-left: $separation-px / 2;
+  }
+}
