--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,6 @@
 html
   head
-    title SonySync
+    title SongSync
     = stylesheet_link_tag 'application', media: :all
     = javascript_include_tag 'application'
   body
