--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -13,7 +13,10 @@ body {
 }
 
 #home-page {
-  background-color: #2c3e50;
+  //background-color: #2c3e50;
+  background-image: url("Background.JPG");
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
 
   text-align: center;
@@ -44,7 +47,7 @@ nav {
 
 h1.header {
   margin-top: 0px;
-  padding-top: 150px;
+  padding-top: 180px;
   font-family: 'Roboto', sans-serif;
   color: #fff;
 }
