--- a/app/views/pages/partial/home.html.erb
+++ b/app/views/pages/partial/home.html.erb
@@ -1,5 +1,8 @@
 <div id="home-page">
-    <h1 class="header">SongSync</h1>
+    <!-- <h1 class="header">SongSync</h1> -->
+    <div id = "logo">
+    	<img src= "http://i62.tinypic.com/jjsac6.png"/>
+    </div>
 
   <div class="oauth-badges">
     <a href='#idk' class="btn btn-primary" id="btn-spotify">Connect with Spotify</a>
