--- a/app/views/pages/partial/player.html.slim
+++ b/app/views/pages/partial/player.html.slim
@@ -8,16 +8,27 @@
         h3.text-center Playlists
         hr
         .row
-          a href='javascript:void(0)' ng-click='selectPlaylist()' ng-class="{'active': current_playlist.id == 'all'}"
-            h5.text-center All Songs
+          a.col-lg-11.col-xs-offset-1 href='javascript:void(0)' ng-click='selectPlaylist()' ng-class="{'active': current_playlist.id == 'all'}"
+            h5 All Songs
         .row ng-repeat='playlist in playlists'
           .col-xs-12
-            h5.text-center
-              a href='javascript:void(0)' ng-click='selectPlaylist(playlist)' ng-class="{'active': current_playlist.id == playlist.id}"
+            h5 ng-show='!playlist.editing'
+              a.col-lg-offset-1 href='javascript:void(0)' ng-click='selectPlaylist(playlist)' ng-class="{'active': current_playlist.id == playlist.id}"
                 | {{playlist.name}} 
-              a.pull-right.btn.btn-danger href='javascript:void(0)' ng-click='removePlaylist(playlist)' x
-        form ng-submit='createPlaylist(newPlaylist)'
-          .row
+              .pull-right
+                a.btn.btn-info href='javascript:void(0)' ng-click='playlist.editing = true' Edit
+                |  
+                a.btn.btn-danger href='javascript:void(0)' ng-click='removePlaylist(playlist)' x
+            .text-center ng-show='playlist.editing'
+              .row
+                form ng-submit='playlist.save() ; playlist.editing = false'
+                  .col-lg-8.col-xs-offset-1
+                    input.form-control type='text' ng-model='playlist.name'
+                  .col-lg-3
+                    .pull-right
+                      a.btn.btn-success href='javascript:void(0)' ng-click='playlist.save() ; playlist.editing = false' Save
+        .row.margin-top-25px
+          form ng-submit='createPlaylist(newPlaylist)'
             .col-xs-8.col-xs-offset-1
               input.form-control type='text' ng-model='newPlaylist.name' placeholder='+ New Playlist...'
             .col-xs-3
@@ -28,12 +39,17 @@
         h3
           span ng-show='current_playlist' &nbsp;{{current_playlist.name}}
           span ng-show='!current_playlist' Select a Playlist...
-          button.btn.btn-lg.btn-primary.pull-right
-            span.fui-plus
-            |  Upload
+          .btn-group.pull-right
+            button.btn.btn-lg.btn-primary.dropdown-toggle data-toggle='dropdown'
+              span.fui-plus
+              |  Upload
+              span.caret
+            ul.dropdown-menu
+              li: a href='javascript:void(0)' ng-click='localUpload(playlist)' From your computer
+              li: a href='javascript:void(0)' ng-click='youtubeImport(playlist)' From YouTube
         hr
-        .row ng-repeat='song in current_playlist.songs'
-          .col-xs-10 ng-click='playSong($index)'
+        .row ng-repeat='song in current_playlist.songs' style='padding: 2px;' ng-class="{'selected': song.selected}"
+          .col-xs-10 ng-click='clickSong(song)'
             | {{$index+1}}.  
             span.fui-play
             |   {{song.name}}
