changed button style

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -144,15 +144,10 @@ form {
 
 
 
-input.btn.btn-lg.btn-default {
+input.btn.btn-lg.btn-primary{
 	margin-top: 30px;
-	color: black;
-	background-color: #9DBDFF;
 }
 
-input.btn.btn-lg.btn-default:hover{
-	background-color: #B9D0FF;
-}
 
 label.control-label.col-lg-4 {
 	font-size: 1.2em;
