--- a/app/views/pages/partial/login.html.slim
+++ b/app/views/pages/partial/login.html.slim
@@ -10,4 +10,4 @@ div.loginPage
       .col-lg-8
         input.form-control type='password' ng-model='credentials.password'
     .input-group
-      input.btn.btn-lg.btn-default type='submit' value='Login'
+      input.btn.btn-lg.btn-primary type='submit' value='Login'
