--- a/app/views/pages/partial/component.html
+++ b/app/views/pages/partial/component.html
@@ -1,4 +1,4 @@
 <div class="form-group now-playing">
     <p>Now Playing: <span ng-show="!info">Nothing</span>{{info.name}}</p>
 </div>
-<audio controls='disabled' id="theaudioplayer" src="{{src}}"></audio>
+<audio autoplay controls='disabled' id="theaudioplayer" src="{{src}}"></audio>
