--- a/app/views/pages/partial/login.html.slim
+++ b/app/views/pages/partial/login.html.slim
@@ -1,13 +1,15 @@
 div.loginPage
   form#login-form.form-horizontal.col-xs-6.col-xs-offset-3 ng-submit='login(credentials)'
-    div errors='credentials.errors'
-    .form-group
-      label.control-label.col-lg-4 Email:
-      .col-lg-8
-        input.form-control type='email' ng-model='credentials.login'
-    .form-group
-      label.control-label.col-lg-4 Password:
-      .col-lg-8
-        input.form-control type='password' ng-model='credentials.password'
-    .form-group
-      input.btn.btn-lg.col-lg-6.col-lg-offset-3.btn-primary type='submit' value='Login'
+    .well
+      h1.text-center Sign In
+      div errors='credentials.errors'
+      .form-group
+        label.control-label.col-lg-4 Email:
+        .col-lg-8
+          input.form-control type='email' ng-model='credentials.login'
+      .form-group
+        label.control-label.col-lg-4 Password:
+        .col-lg-8
+          input.form-control type='password' ng-model='credentials.password'
+      .form-group
+        input.btn.btn-lg.col-lg-6.col-lg-offset-3.btn-primary type='submit' value='Login'
